Bugfix:: Captured the challengeId at the controller level and modified swagger accordingly.
